--- a/app/src/main/res/layout/peternak_view.xml
+++ b/app/src/main/res/layout/peternak_view.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal"
     android:layout_margin="10dp">
 
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -18,6 +19,13 @@
                 android:id="@+id/image"
                 android:layout_width="100dp"
                 android:layout_height="100dp" />
+
+            <TextView
+                android:id="@+id/id_sapi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="id_sapi"
+                android:textColor="@null"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
