--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,16 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.project.xavier.sapiku.Detail">
 
-    <FrameLayout
+    <ScrollView
+        android:id="@+id/info_sapi"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <ImageView
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/frame_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/hutan"/>
+
+                <TextView
+                    android:id="@+id/nama_peternak_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ini Wallpaper"
+                    android:textSize="30sp"
+                    android:textColor="#ffffff"
+                    android:layout_gravity="bottom"
+                    android:layout_margin="18dp"
+                    android:fontFamily="casual"
+                    android:textStyle="bold"/>
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/jenis_sapi"
+                            android:text="Jenis :"
+                            style="@style/CodeFont"/>
+
+                        <TextView
+                            android:id="@+id/umur_sapi_2"
+                            android:text="Umur :"
+                            style="@style/CodeFont"/>
+
+                        <TextView
+                            android:id="@+id/alamat_peternak"
+                            android:text="Alamat :"
+                            style="@style/CodeFont"/>
+
+                        <TextView
+                            android:id="@+id/gender_sapi"
+                            android:text="Gender :"
+                            style="@style/CodeFont"/>
+
+                        <TextView
+                            android:id="@+id/harga_sapi_2"
+                            android:text="Harga :"
+                            style="@style/CodeFont"/>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/deskripsi_cardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/info_sapi"
+                    android:layout_margin="10dp">
+
+                    <TextView
+                        android:id="@+id/deskripsi_sapi"
+                        android:text="Deskripsi\n.\n.\n.\n.\n.\n.\n.\n.\n."
+                        style="@style/CodeFont"/>
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/go_confirm"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    </FrameLayout>
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:text="beli"
+        android:textSize="22sp"
+        android:textColor="#ffffff"
+        android:background="#FF9800"/>
 </RelativeLayout>
